--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1,11 +1,3 @@
-/* 
-
-Template 2090 Kinetic
-
-http://www.tooplate.com/view/2090-kinetic
-
-*/
-
 body {
 	font-family: 'Montserrat', sans-serif;
 }
@@ -37,7 +29,7 @@ html, body, section, .page {
 }
 
 section {
-  width:400%;  
+  width:400%;
 }
 
 .page {
@@ -73,7 +65,7 @@ section {
 }
 
 ul {
- position: fixed; 
+ position: fixed;
  z-index: 1;
 }
 #t1:target .page#p1 {
@@ -89,7 +81,7 @@ ul {
     transform: translateX(-290%);
 }
 
-#t2:target ul, 
+#t2:target ul,
 #t3:target ul,
 #t4:target ul {
   background-color: rgba(48, 51, 60, 1);
@@ -102,7 +94,7 @@ ul {
   transition: all 0.5s ease-in-out;
 }
 
-#t2:target .page#p1 .icon, 
+#t2:target .page#p1 .icon,
 #t3:target .page#p1 .icon,
 #t4:target .page#p1 .icon {
   -webkit-filter: blur(5px);
@@ -126,7 +118,7 @@ ul .icon:hover {
 #t2:target ul .icon,
 #t3:target ul .icon,
 #t4:target ul .icon {
-  transform: scale(1); 
+  transform: scale(1);
   transition-delay: .1s;
 }
 
@@ -358,7 +350,7 @@ a {
 }
 
 #p4 fieldset {
-	margin-top: -30px;	
+	margin-top: -30px;
 	margin-bottom: 15px;
 }
 
@@ -473,7 +465,7 @@ a {
   -webkit-transition: all 0.3s linear;
 }
 
-@media (max-width: 600px){ 
+@media (max-width: 600px){
 
   ul {
     padding-top: 50%!important;
@@ -482,7 +474,7 @@ a {
 }
 
 
-@media (max-width: 850px){ 
+@media (max-width: 850px){
 
   ul {
     padding-top: 10%;
@@ -541,7 +533,7 @@ a {
 		margin-bottom: 60px;
 	}
 
-	#p4 .right-info i { 
+	#p4 .right-info i {
 		margin-right: 0px;
 	}
 
@@ -791,4 +783,23 @@ body.lb-disable-scrolling {
   cursor: pointer;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
+}
+
+.gifs a {
+  position: relative;
+  display: block;
+}
+
+.gif-preload {
+  display: none;
+}
+
+.gif-loading {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  font-size: 40px;
+  color: #fff;
+  top: 0;
+  left: 0;
 }
